--- a/Dockerfile-trace-producer
+++ b/Dockerfile-trace-producer
@@ -1,19 +1,6 @@
-
-# syntax=docker/dockerfile:1
-
-FROM eclipse-temurin:8 as builder
-WORKDIR /opt/app
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
-RUN ./mvnw dependency:go-offline
-COPY ./trace-producer ./trace-producer
-COPY ./trace-consumer ./trace-consumer
-RUN ./mvnw clean install -Dmaven.test.skip=true
-
-
 FROM eclipse-temurin:8
-WORKDIR /opt/app
+ENV BASE_DIR=/home
 RUN mkdir -p ${BASE_DIR}
-COPY --from=builder /opt/app/target/trace-producer-0.0.1-SNAPSHOT.jar /home/app.jar
-CMD ["java", "-jar", "/home/*.jar" ]
-
+WORKDIR ${BASE_DIR}
+add trace-producer/target/trace-producer-0.0.1-SNAPSHOT.jar  app.jar
+CMD ["sh","-c","java -jar app.jar"]
