--- a/Dockerfile-trace-producer
+++ b/Dockerfile-trace-producer
@@ -1,5 +1,6 @@
 FROM eclipse-temurin:8
-RUN mkdir -p /home
-WORKDIR /home
+ENV BASE_DIR=/home
+RUN mkdir -p ${BASE_DIR}
+WORKDIR ${BASE_DIR}
 add trace-producer/target/trace-producer-0.0.1-SNAPSHOT.jar  app.jar
 CMD ["sh","-c","java -jar app.jar"]
